--- a/Reproducible Research_Project1.Rmd
+++ b/Reproducible Research_Project1.Rmd
@@ -11,8 +11,8 @@ knitr::opts_chunk$set(echo = TRUE, fig.path = "images/")
 
 REPRODUCIBLE RESEARCH:PROJECT 1
 ===============================
-The very first thing a person, wanting to reproduce this project results is to load the data. Please download the data from https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip to the following directory that has to be created in your PC:
-```C:\Project 1```
+The very first thing a person wanting to reproduce this project results needs to do is to load the data. Please download the data from https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip, unzipped the file to the following directory that has to be created in your PC:
+```C:\Project_1```
 
 Loading and Preprocessing the Data
 ===============================
@@ -20,12 +20,12 @@ Loading and Preprocessing the Data
 library(plyr)
 library(ggplot2)
 
-steps1 <- read.csv("C:/Project 1/activity.csv")
+steps1 <- read.csv("C:/Project_1/activity.csv")
 A1<-na.omit(steps1)
 ```
 
-What is mean total number of steps taken per day?
-=================================================
+What is the mean of the total number of steps taken per day?
+============================================================
 Following routine will be used to calculate the total number of steps taken per day, having for the latter as output an histogram,
 
 ```{R}
